--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,9 @@ ul.navbar li.right {
 .recipe.open {
   padding: 14px 16px;
 }
+
+/* grocery list styling */
+#grocery-list {
+  list-style-type: none;
+  padding-left: 0;
+}
